# spicyzboss

./: .gitignore  Cargo.toml  README.md  migrations.json  nx.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build-and-deploy.yaml  deploy-root.yaml  main.yaml
apps/api_finance/: Cargo.toml  wrangler.toml
apps/api_finance/create_transaction/: Cargo.toml  test.sql  wrangler.toml
apps/api_finance/create_transaction/src/: lib.rs
apps/api_finance/root/: Cargo.toml  wrangler.toml
apps/api_finance/root/src/: lib.rs
apps/api_finance/src/: lib.rs
apps/api_finance/transaction/: Cargo.toml  wrangler.toml
apps/api_finance/transaction/src/: lib.rs
apps/root/: .eslintrc.json  README.md  package.json  postcss.config.mjs  project.json  pwa-assets.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/root/functions/: [[path]].ts
apps/root/public/: _headers  _redirects  manifest.json  robots.txt  security.txt
apps/root/src/: entry.cloudflare-pages.tsx  entry.dev.tsx  entry.preview.tsx  entry.ssr.tsx  global.css  root.tsx
libs/core_finance/: Cargo.toml
libs/core_finance/prisma/: schema.prisma
libs/core_finance/prisma/migrations/20231121171253_init/: migration.sql
libs/core_finance/src/: lib.rs
libs/core_finance/src/api/: mod.rs
libs/core_finance/src/api/dto/: mod.rs  transaction.rs
libs/core_finance/src/domain/entities/: mod.rs  tag.rs  tag_on_transaction.rs  tags.rs  tags_on_transaction.rs  transaction.rs  transaction_type.rs
libs/core_finance/src/domain/errors/: common.rs  mod.rs  repository.rs
libs/core_finance/src/domain/repositories/: mod.rs  repository.rs  tag.rs  transaction.rs
libs/core_finance/src/domain/services/: mod.rs  transaction.rs
libs/core_finance/src/infrastructure/: mod.rs
libs/core_finance/src/infrastructure/entities/: mod.rs
libs/core_finance/src/infrastructure/entities/d1/: mod.rs  tag.rs  transaction.rs  transaction_type.rs
libs/core_finance/src/infrastructure/errors/d1/: mod.rs  repository.rs
libs/core_finance/src/infrastructure/repositories/: mod.rs
libs/core_finance/src/infrastructure/repositories/d1/: mod.rs  tag.rs  transaction.rs
libs/core_finance/src/infrastructure/utils/: d1.rs
libs/core_finance/src/usecases/: mod.rs  transaction.rs
libs/finance/: Cargo.toml
libs/finance/src/api/: mod.rs
libs/finance/src/api/controllers/: authentication.rs  category.rs  mod.rs  tag.rs  transaction.rs
libs/finance/src/api/dto/: category.rs  mod.rs  tag.rs  transaction.rs
libs/finance/src/domain/entities/: category.rs  mod.rs  tag.rs  tag_on_transaction.rs  transaction.rs
libs/finance/src/domain/errors/: common.rs  repository.rs
libs/finance/src/domain/repositories/: category.rs  mod.rs  repository.rs  tag.rs  transaction.rs
libs/finance/src/domain/services/: category.rs  mod.rs  tag.rs  transaction.rs
libs/finance/src/infrastructure/: mod.rs
libs/finance/src/infrastructure/entities/: mod.rs
libs/finance/src/infrastructure/entities/d1/: category.rs  mod.rs  tag.rs  transaction.rs
libs/finance/src/infrastructure/errors/: mod.rs
libs/finance/src/infrastructure/errors/d1/: repository.rs
libs/finance/src/infrastructure/repositories/: mod.rs
libs/finance/src/infrastructure/repositories/d1/: category.rs  mod.rs  tag.rs  transaction.rs
libs/finance/src/usecases/: category.rs  mod.rs  tag.rs  transaction.rs
tools/prisma_cli/: Cargo.toml
(+16 files in other folders)
