[workspace]
members = ["tools/prisma_cli", "apps/api_finance/create_transaction", "libs/core_finance"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = { version = "0.0.18", features = ["d1"] }
hyper = "0.14"
