[workspace]
members = ["apps/api_finance", "libs/finance"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
finance = { path = "libs/finance" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = { version = "0.2.0", features = ["d1"] }
axum = { version = "0.7.5", default-features = false }
