[package]
name = "api_finance"
version.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true }
finance = { workspace = true }
worker = { workspace = true }
