[package]
name = "api_finance"
version.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true }
finance = { workspace = true }
worker = { workspace = true }
console_error_panic_hook = "0.1.7"
tower-service = "0.3.2"
